--- a/codingApple-study/src/App.css
+++ b/codingApple-study/src/App.css
@@ -11,9 +11,11 @@ div {
   border-bottom: 1px solid grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.modal {
+  margin-top: 20px;
+  padding: 20px;
+  background: #eee;
+  text-align: left;
 }
 
 @media (prefers-reduced-motion: no-preference) {
