--- a/한입크기리액트스터디/section12/src/components/Editor.css
+++ b/한입크기리액트스터디/section12/src/components/Editor.css
@@ -3,7 +3,8 @@
   font-weight: bold;
 }
 
-.Editor > section > input {
+.Editor > section > input,
+textarea {
   background-color: rgb(236, 236, 236);
   border: none;
   border-radius: 5px;
@@ -15,4 +16,12 @@
   display: flex;
   justify-content: space-around;
   gap: 2%;
+}
+
+.Editor > section > textarea {
+  padding: 20px;
+  width: 100%;
+  min-height: 200px;
+  resize: vertical;
+  box-sizing: border-box;
 }
