--- a/한입크기리액트스터디/section12/src/components/Editor.css
+++ b/한입크기리액트스터디/section12/src/components/Editor.css
@@ -1,3 +1,7 @@
+.Editor > section {
+  margin-bottom: 40px;
+}
+
 .Editor > section > h4 {
   font-size: 22px;
   font-weight: bold;
@@ -24,4 +28,9 @@ textarea {
   min-height: 200px;
   resize: vertical;
   box-sizing: border-box;
+}
+
+.Editor .button_section {
+  display: flex;
+  justify-content: space-between;
 }
